Vorlesung bis Satz 4.1.2 ergaenzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2183 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -60,6 +60,7 @@
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{nicefrac}
+\usepackage{esdiff}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -2157,6 +2158,102 @@ die \highl{\textsc{Poisson}"=Formel} lautet:
   \sum_{n=-\infty}^{\infty} \hat{f}(n)e^{inx}
 \end{gather*}
 
+\chapter{Anwendungen der Fouriertransformation auf dem \texorpdfstring{$S(\R^n)$}{S(R\textsuperscript{n})}}
+\label{cha:anwend-der-four}
+
+\section{Die Wellengleichung in \texorpdfstring{$S(\R^n)$}{S(R\textsuperscript{n})}}
+\label{sec:die-well-texorpdfstr}
+
+Wir betrachten hier nur \textsc{Schwartz}"=Funktionen als
+Anfangsbedingungen. Im eindimensionalen Fall haben wir: $\frac{\partial^{2}
+u}{\partial x^{2}}= \frac{1}{c^{2}} \frac{\partial^{2} u}{\partial t^{2}}$ mit
+$u=u(x,t)$. Für den $n$-dimensionalen Fall ergibt sich somit:
+\begin{gather*}
+  \underbrace{\frac{\partial^{2} u}{\partial x^{2}_{1}}+\dotsb+\frac{\partial^{2}
+     u}{\partial x^{2}_{n}}}_{=\Delta u}= \frac{1}{c^{2}} \frac{\partial^{2}
+     u}{\partial t^{2}}
+\end{gather*}
+mit $u=u(x,t), x\in\R^{n}, t\in\R$. Die Variable $c$ entspricht der
+Lichgeschwindigkeit. Setzen wir $c=1$, so erhalten wir die Ausbreitung von
+elektromagnetischen Schwingungen im Vakuum mit der Formel $\Delta u=
+\frac{\partial^{2} u}{\partial t^{2}}$. Mit den Anfangsbedingungen $u(x,0)=
+f(x)$ und $\esdiff{u}{t}(x,0)= g(x)$ haben wir das Cauchy"=Problem für die
+Wellengleichung im $\R^{n}$.
+
+Wir entwickeln nun eine Heuristik zum Finden der Lösung. Dazu führen wir eine
+Fouriertransformation der Gleichung sowie der Anfangsbedingungen bezüglich
+$x\in\R^{n}$ durch. Es ist $(\widehat{\frac{\partial^{2} u}{\partial
+x_{1}^{2}}})(\xi,t)= (-i \xi_{1})^{2} \hat{u}(\xi,t)=
+-\xi_{1}^{2}\hat{u}(\xi,t)$ und $(\widehat{\Delta u})(\xi,t)= -\abs{\xi}^{2}
+\hat{u}(\xi,t)$.
+
+Wir setzen nun $v(t)=\hat{u}(\xi,t)$ und es folgt,
+$-\abs{\xi}^{2}v(t)=v''(t)$. Damit ist aus der partiellen
+Differentialgleichung durch die Fouriertransformation eine gewöhnliche
+Differentialgleichung geworden. Mit dem Ansatz $v(t)= A_{\xi}\cos(\abs{\xi}t)+
+B_{\xi} \sin(\abs{\xi}t)$ folgt:
+\begin{gather}
+  \label{eq:4.1}
+     \hat{u}(\xi,t)= A(\xi) \cos(\abs{\xi}t)+ B(\xi)\sin(\abs{\xi}t)
+\end{gather}
+Aus der Fouriertransformation der Anfangsbedingungen ergibt sich:
+\begin{align*}
+  \hat{u}(\xi,0) &= \hat{f}(\xi) &\Rightarrow^{\text{\autoref{eq:4.1}}}
+     \hat{f}(\xi)= A(\xi)\\
+  \diffp{\hat{u}}{t}(\xi,0) &= \hat{g}(\xi,0)
+     &\Rightarrow^{\text{\autoref{eq:4.1}}} \hat{g}(\xi)= \abs{\xi} B(\xi)
+\end{align*}
+Damit folgt:
+\begin{gather*}
+  \hat{u}(\xi,t)= \hat{f}(\xi)\cos(\abs{\xi}t)+
+     \hat{g}(\xi)\frac{\sin(\abs{\xi}t)}{\abs{\xi}}
+\end{gather*}
+Für $f,g\in S(\R^{n})$ und festes $t$ folgt somit, $\hat{u}(\xi,t)\in
+S(\R^{n})$ und weiter $u(\xi,t)\in S(\R^{n})$.
+
+%satz 4.1.1
+\begin{satz}\label{satz:411-neu}
+  Eine Lösung des \textsc{Cauchy}"~Problems $\Delta u= \frac{\partial^{2}
+  u}{\partial t^{2}}$ mit den Anfangsbedingungen $u(x,0)= f(x)$ und
+  $\diffp{u}{t}(x,0)= g(x)$ ist gegeben durch
+  \begin{gather*}
+    u(x,t)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}} \left(\hat{f}(\xi)
+       \cos(\abs{\xi}t)+ \hat{g}(\xi)
+       \frac{\sin(\abs{\xi}t)}{\abs{\xi}}\right)\cdot e^{ix\xi}\,d\xi
+  \end{gather*}
+  \begin{proof}
+    Der Beweis erfolgt in drei Schritten. Wir machen uns zunächst Gedanken
+    über die Gleichung selbst, dann über die Anfangsbedingungen und
+    schließlich zur Eindeutigkeit.
+    \begin{enumerate}
+     \item $\Delta u(x,t)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}} \left(\hat{f}(\xi)
+       \cos(\abs{\xi}t)+ \hat{g}(\xi)
+       \frac{\sin(\abs{\xi}t)}{\abs{\xi}}\right)\cdot \underbrace{\Delta
+      e^{ix\xi}}_{-\abs{\xi}^{2}e^{ix\xi}}\,d\xi$ und $\frac{\partial^{2}
+      u}{\partial t^{2}}(x,t)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}} \left(\hat{f}(\xi)
+       \cos(\abs{\xi}t)+ \hat{g}(\xi)
+       \frac{\sin(\abs{\xi}t)}{\abs{\xi}}\right)(\abs{\xi})^{2}\cdot
+      e^{ix\xi}\,d\xi$. Denn die Gleichheit ergibt sich durch
+      $\frac{\partial^{2} u}{\partial t^{2}}\cos(\abs{\xi}t)=
+      -\abs{\xi}^{2}\cos(\abs{\xi}t)$.
+     \item $u(x,0)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}}
+      \hat{f}(\xi)e^{ix\xi}\,d\xi= \check{\hat{f}}(x)=f(x)$ und
+      $\diffp{u}{t}(x,0)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}}
+      \hat{g}(x)e^{ix\xi}\,d\xi=g(x)$
+     \item Die Eindeutigkeit kann man durch eine lokale Version der Energie
+      zeigen.  Eine globale Version ist $E(t)=
+      \int_{\R^{n}}\left(\abs{\diffp{u}{{x_{1}}}}^{2}+\dotsb
+      +\abs{\diffp{u}{{x_{n}}}}^{2} +\abs{\diffp{u}{{t}}}^{2}\right)\,dx$.
+      Dabei ist $E(t)$ die Energie der Lösung.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%satz 4.1.2
+\begin{satz}[Energieerhaltungssatz]
+  Ist $u$ die Lösung aus \autoref{satz:411-neu}, so gilt für alle $t\in\R$ die
+  Beziehung $E(t)=E(0)$, d.\,h. die Energie der Welle bleibt konstant.
+\end{satz}
 
 \chapter{Die Fouriertransformation auf lokalkompakten abelschen Gruppen}
 \section{Abriß der allgemeinen Topologie}
