Warnungen aus dem Skriptcheck behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@2186 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -16,6 +16,10 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
 \documentclass[ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
@@ -93,10 +97,6 @@
 \newtheorem{bsp}{Beispiel}[chapter]
 \newtheorem{folg}{Folgerung}[chapter]
 
-% Die folgenden Theoremumgebungen bekommen keine Nummer
-\theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
-
 % \theoremheaderfont{\global\hasprooftrue\scshape}
 \theoremheaderfont{\scshape}
 \theorembodyfont{\normalfont}
@@ -122,7 +122,6 @@
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
-\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
@@ -144,20 +143,6 @@
 
 % Befehl für die Darstellung der Gliederungsüberschriften im Index
 \newcommand*{\lettergroup}[1]{\minisec{#1}}
-
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
-
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
@@ -1244,7 +1229,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
    \item Die einzige holomorphe Fortsetzung von $\ln(1 + x)$ für $x < 1$ aus
     dem Reellen ins Komplexe lautet:
     \begin{gather*}
-      \ln(1 + z) = \sum^{\infty}_{n=1} (-1)^{n+1} \frac{z^n}{n} \qquad \forall \, |z| < 1
+      \ln(1 + z) = \sum^{\infty}_{n=1} (-1)^{n+1} \frac{z^n}{n} \qquad \forall \abs{z} < 1
     \end{gather*}
   \end{enumerate}
 \end{bemerk}
