Beweis zu Satz 4.1.1 eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2189 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2253,6 +2253,30 @@ S(\R^{n})$ und weiter $u(\xi,t)\in S(\R^{n})$.
 \begin{satz}[Energieerhaltungssatz]
   Ist $u$ die Lösung aus \autoref{satz:411-neu}, so gilt für alle $t\in\R$ die
   Beziehung $E(t)=E(0)$, d.\,h. die Energie der Welle bleibt konstant.
+  \begin{proof}
+    Plancherel:
+    \begin{align*}
+      \int_{\R^n} \sum_{j=1}^n \abs{\diffp{u}{{x_j}}}^2\,dx &= \int_{\R^n} \sum_{j=1}^n  \abs{\widehat{\diffp{u}{{x_j}}} (\xi,t)}^2\,d\xi\\
+      &= \int_{\R^n} \sum_{j=1}^n \abs{(-i\xi_j) \hat{u}(\xi,t)}^2\,d\xi\\
+      &= \int_{\R^n} \abs{\xi}^2 \abs{\hat{u}(\xi,t)}^2\,d\xi\\
+      &= \int_{\R^n} \abs{\abs{\xi} \hat{f}(\xi) \cos(\abs{\xi}t)+ \hat{g}(\xi) \sin(\abs{\xi}t)}^2\,d\xi
+    \end{align*}
+    Also ergibt sich $\int_{\R^n} \abs{\diffp{u}{t}}^2\,dt=
+    \int_{\R^n} \abs{\diffp{\hat{u}}{t}}^2\,dt$ und wir müssen zeigen:
+    \begin{gather*}
+      E(t)= \int_{\R^n} \right((\abs{\hat{f}(\xi)} \abs{xi})^2+
+    \abs{\hat{g}(\xi)}^2\left)^2\,d\xi= E(0)
+    \end{gather*}
+    Es gilt: $\abs{a\cos \alpha+b\sin\alpha}^2+ \abs{-a\sin\alpha+
+      b\cos\alpha}^2= \abs{a}^2+ \abs{b}^2$ mit $a,b\in\C$ und
+    $\alpha\in\R$. Dann ist $a=\hat{a}(\xi)\abs{\xi), b= \hat{g}(\xi),
+      \alpha=\abs{\xi)t$. Zum Nachweis müssen wir mit konjugierten
+        Komponenten multiplizieren:
+        $(a\cos\alpha+b\sin\alpha)(\overline{a}\cos\alpha+
+        \overline{b}\sin\alpha)+ (-a\sin\alpha+
+        b\cos\alpha)(-\overline{a}\sin\alpha+ \overline{b}\cos\alpha)=
+        \abs{a}^2+ \abs{b}^2+ 0a\overline{b}+ 0\overline{a}b$.
+  \end{proof}
 \end{satz}
 
 \chapter{Die Fouriertransformation auf lokalkompakten abelschen Gruppen}
