Zwei Schreibfehler entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2190 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2264,13 +2264,13 @@ S(\R^{n})$ und weiter $u(\xi,t)\in S(\R^{n})$.
     Also ergibt sich $\int_{\R^n} \abs{\diffp{u}{t}}^2\,dt=
     \int_{\R^n} \abs{\diffp{\hat{u}}{t}}^2\,dt$ und wir müssen zeigen:
     \begin{gather*}
-      E(t)= \int_{\R^n} \right((\abs{\hat{f}(\xi)} \abs{xi})^2+
-    \abs{\hat{g}(\xi)}^2\left)^2\,d\xi= E(0)
+      E(t)= \int_{\R^{n}} \left( (\abs{\hat{f}(\xi)} \abs{xi})^2+
+    \abs{\hat{g}(\xi)}^2\right)^2\,d\xi= E(0)
     \end{gather*}
     Es gilt: $\abs{a\cos \alpha+b\sin\alpha}^2+ \abs{-a\sin\alpha+
       b\cos\alpha}^2= \abs{a}^2+ \abs{b}^2$ mit $a,b\in\C$ und
-    $\alpha\in\R$. Dann ist $a=\hat{a}(\xi)\abs{\xi), b= \hat{g}(\xi),
-      \alpha=\abs{\xi)t$. Zum Nachweis müssen wir mit konjugierten
+    $\alpha\in\R$. Dann ist $a=\hat{a}(\xi)\abs{\xi}, b= \hat{g}(\xi),
+      \alpha=\abs{\xi}t$. Zum Nachweis müssen wir mit konjugierten
         Komponenten multiplizieren:
         $(a\cos\alpha+b\sin\alpha)(\overline{a}\cos\alpha+
         \overline{b}\sin\alpha)+ (-a\sin\alpha+
