so ein kleines Komma und soviel Schaden
git-svn-id: https://svn.lug-jena.de/uni-skripte@2194 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2307,7 +2307,7 @@ $u(x,t)$ der Wellengleichung im Fall $n=3$.
 
 Sei $f\in S(\R^{3})$ und $t\in\R$. Das sphärische Mittel ist dann
 \begin{gather*}
-  M_{t}(f)(x)\coloneq\frac{1}{4\pi} \int_{\SSS^{2}} f(x-\gamma t)\d\sigma(\gamma) 
+  M_{t}(f)(x)\coloneq\frac{1}{4\pi} \int_{\SSS^{2}} f(x-\gamma t)\,d\sigma(\gamma) 
 \end{gather*}
 Dabei ist $\SSS^{2}\coloneq\{y\in\R^{3}\colon\abs{y}\leq1\}$ und $d\gamma$ das
 Oberflächenelement auf $\SSS$.
