Erklärung zum Hausdorff-Raum.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2202 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -407,7 +407,9 @@ Wir verlangen zusätzlich, dass $\phi$ stetig ist.
 \paragraph{Ausblick}
 Wir studieren eine Gruppe $G$. Dies ist eine lokalkompakte abelsche Gruppe.
 Dabei heißt \highl{Lokalkompaktheit}, dass wir auf $G$ eine Topologie haben
-und jedes Element eine kompakte Umgebung hat.
+und jedes Element eine kompakte Umgebung hat\footnote{Genauer muss $G$
+ein \textsc{Hausdorff}-Raum sein, d.\,h. alle Punkte in $G$ haben
+disjunkte offene Umgebunden.}.
 Diese Topologie verträgt sich mit der Gruppenoperation. Wichtig ist: Sei
 $O\subseteq G$ offen, dann ist $xO=\{xy\colon y\in O\}$ wieder offen. Wegen der
 Eigenschaft muss man zur Prüfung auf Lokalkompaktheit nur das Einselement
