--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -438,7 +438,7 @@ Beispiel sind $(\R, +), (\R^{n},+), \C, \R^{*}=\R\setminus \{0\}$ mit der
 \paragraph{Suche der Charaktere}
 Die erste Aufgabenstellung ist immer, die Charaktere zu suchen (finden der
 dualen Gruppe). Jetzt ist $G=\T$. Sei $\phi\colon[0,2\pi)\rightarrow\T=
-\{Z\in\C\colon\abs{z}=1\}$ stetig mit $\phi(x+y)=\phi(x)\phi(y)$.
+\{z\in\C\colon\abs{z}=1\}$ stetig mit $\phi(x+y)=\phi(x)\phi(y)$.
 
 Man kann für $a\in[0,2\pi)$ mit $b=\int_{0}^{a} \phi(x)\,dx\neq0$ finden. Wir gehen
 das folgendermaßen an: $b\phi(y)=\int_{0}^{a} \phi(x)\phi(y)\,dx= \int_{0}^{a}
@@ -447,7 +447,8 @@ $2\pi$ rechnen, um nicht über die Grenzen zu rutschen).
 \begin{gather*}
   \phi(y)= \frac{1}{b} \int_{y}^{a+y} \phi(x)\,dx
 \end{gather*}
-Somit folgt, dass $\phi$  stetig differenzierbar ist und $\phi'(y)=\lim_{h\rightarrow
+Somit folgt, dass $\phi$  stetig differenzierbar ist und für die
+Ableitung $\phi'(y)=\lim_{h\rightarrow
 0} \frac{\phi(y+h)-\phi(y)}{h}= \lim_{h\rightarrow 0} \frac{\phi(y)\phi(h)-
 \phi(y)\phi(0)}{h}= \phi(y)\phi'(0)$. Damit ergibt sich $\phi'=K\phi$ mit
 $K=\phi'(0)\Rightarrow\phi(x)=ce^{Kx}$ für $x\in[0,2\pi)$. Für
