Schreibweise von Cesàro korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2208 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -732,7 +732,7 @@ folgt weiter:
 Es gibt die drei Summationsverfahren:
 \begin{enumerate}
   \item Partialsummen: $S_{N}=\sum_{k=1}^{n}\xi_{k}$
- \item Cesaro-Mittel: $S=\lim \frac{1}{n} \sum_{k=1}^{n} S_{k}$
+ \item \textsc{Cesàro}-Mittel: $S=\lim \frac{1}{n} \sum_{k=1}^{n} S_{k}$
   (arithmetisches Mittel der Partialsummen)
  \item Abel-Summation: $S=\lim_{r\uparrow 1} \sum_{k=1}^{\infty} \xi_{k} r^{k}$
 \end{enumerate}
@@ -746,7 +746,7 @@ Funktionen. Manchmal möchte man aber ganze Räume von Funktionen betrachten.
 
 \begin{satz}[Carleson]
   Die Fourierreihe einer Funktion $f\in L_{p}(\T)$ für $1<p<\infty$
-  konvergiert fast überall gegen $f$.
+  konvergiert fast überall gegen die Funktion $f$.
 \end{satz}
 
 \begin{bemerk}
@@ -767,7 +767,8 @@ Funktionen. Manchmal möchte man aber ganze Räume von Funktionen betrachten.
 \end{description}
 
 \paragraph{Fejer-Summation}
-Diese entspricht der Cesaro-Summationsmethode:
+Diese ist eine Anwendung der \textsc{Cesàro}-Summationsmethode. Wir
+bilden dazu das $N$-te \textsc{Cesàro}-Mittel der Fourierreihe:
 \begin{align*}
   \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} S_{j} f(x)\\
   \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} \sum_{k=-j}^{j} \hat{f}(k)
@@ -4826,7 +4827,7 @@ sechsten, neunten usw. Oberschwingungen?
 \section{Summationsmethoden I}
 
 Sei $\sum \xi_{k}$ eine Reihe komplexer Zahlen mit den Partialsummen
-$S_{n}= \sum_{k=1}^{n} \xi_{k}$, den \textsc{Cesaro}-Partialsummen
+$S_{n}= \sum_{k=1}^{n} \xi_{k}$, den \textsc{Cesàro}-Partialsummen
 $C_{n}= n^{-1}\sum_{k=1}^{n} S_{k}$ und den
 \textsc{Abel}-Partialsummen $A_{n}(r)= \sum_{k=1}^{n}
 r^{k}\xi_{k}$. Die Reihe $\sum\xi_{k}$ ist konvergent/summierbar mit
@@ -4835,7 +4836,7 @@ der Summe $S$, falls $\lim_{n\rightarrow\infty} C_{n}=S$. Sie ist
 \lim_{n\rightarrow\infty} A_{n}(r)=S$ gilt.
 \begin{enumerate}[(a)]
 \item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
-  \textsc{Cesaro}-summierbar mit Summe $S$ ist, falls sie summierbar
+  \textsc{Cesàro}-summierbar mit Summe $S$ ist, falls sie summierbar
   mit Summe $S$ ist. Hinweis: Es ist hilfreich, $S=0$ anzunehmen.
 \item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
   \textsc{Abel}-summierbar mit Summe $S$ ist, falls sie summierbar mit
@@ -4844,7 +4845,7 @@ der Summe $S$, falls $\lim_{n\rightarrow\infty} C_{n}=S$. Sie ist
   +S_{n}r^{n+1}$ beweisen und benutzen.
 \item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
   \textsc{Abel}-summierbar mit Summe $S$ ist, falls sie
-  \textsc{Cesaro}-summierbar mit Summe $S$ ist. Hinweis: Es ist
+  \textsc{Cesàro}-summierbar mit Summe $S$ ist. Hinweis: Es ist
   hilfreich, $S=0$ anzunehmen. Dann kann man die Formel
   $\sum_{k=1}^{\infty} \xi_{k}r^{k}=(1-r)^{2}\sum_{k=1}^{\infty}
   kC_{k}r^{k}$ beweisen und benutzen.
@@ -4854,13 +4855,13 @@ der Summe $S$, falls $\lim_{n\rightarrow\infty} C_{n}=S$. Sie ist
 
 In der obigen Aufgabe wurden die folgenden Implikationen für eine
 Reihe $\sum\xi_{k}$ komplexer Zahlen gezeigt: summierbar $\Rightarrow$
-\textsc{Cesaro}-summierbar $\Rightarrow$
+\textsc{Cesàro}-summierbar $\Rightarrow$
 \textsc{Abel}-summierbar. Geben Sie Beispiele an, die zeigen, dass die
 inversen Implikationen nicht gelten.
 
 \section{Summationsmethoden III -- Tauber-Satz}
 
-Sei nun $\sum\xi_{k}$ \textsc{Cesaro}-summierbar  mit der Summe $S$
+Sei nun $\sum\xi_{k}$ \textsc{Cesàro}-summierbar  mit der Summe $S$
 und der zusätzlichen Voraussetzung $\lim_{k\rightarrow\infty}
 k\xi_{k}=0$. Zeigen Sie, dass $\sum\xi_{k}$ summierbar mit der Summe
 $S$ ist.
