Einige übervolle hboxen entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2209 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -430,7 +430,7 @@ Beispiel sind $(\R, +), (\R^{n},+), \C, \R^{*}=\R\setminus \{0\}$ mit der
   nach. (Übung)
 
   Man bezeichnet die Gruppe der Charaktere, deren Bild in
-  $\{z\in\C:\abs{z}=1\}$ liegt, als \highl[Gruppe!duale]{duale
+  $\{z\in\C\colon\abs{z}=1\}$ liegt, als \highl[Gruppe!duale]{duale
     Gruppe}.
 
   Falls $G$ kompakt ist, folgt, dass jeder Charakter nach $\T$ abbildet,
@@ -772,7 +772,7 @@ bilden dazu das $N$-te \textsc{Cesàro}-Mittel der Fourierreihe:
 \begin{align*}
   \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} S_{j} f(x)\\
   \sigma_{N}f(x) &= \frac{1}{N+1} \sum_{j=0}^{N} \sum_{k=-j}^{j} \hat{f}(k)
-     e^{ikt}\\
+     e^{ikt}
   &= \sum_{k=-N}^{N} \frac{N+1-\abs{k}}{N+1} \hat{f}(k)e^{ikt}
 \end{align*}
 
@@ -1135,7 +1135,7 @@ $A\leq\nicefrac{1}{4\pi} l^2$ gilt.
   \end{gather*}
   Die Gleicheit gilt genau dann, wenn die $\gamma$ ein Kreis ist.
   \begin{proof}
-    Sei o.\,B.\,d.\,A. die Parametrisierung durch die Bogenlänge
+    Sei ohne Beschränkung der Allgemeinheit die Parametrisierung durch die Bogenlänge
     $\abs{\gamma'(s)}^{2}= \abs{x'(s)}^{2}+ \abs{y'(s)}^{2}=1$ und es ergibt
     sich $a=0$ sowie $b=l=2\pi$. Nun ist zu zeigen, dass $A\leq\pi$ und es gilt:
     \begin{gather*}
@@ -1245,11 +1245,13 @@ Für den Beweis der Hauptaussage benötigen wir zunächst eine Vorbereitung:
       \begin{align*}
 	\abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} f(n\gamma)- \int_{0}^{1}
 	   f(x)\,dx} &\leq \abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} f(n\gamma)-
-	   \nicefrac{1}{N} \sum_{n=1}^{N} P(n\gamma)}+ \abs[\bigg]{\frac{1}{N}
+	   \frac{1}{N} \sum_{n=1}^{N} P(n\gamma)}\\
+         &\qquad+ \abs[\bigg]{\frac{1}{N}
 	   \sum_{n=1}^{N} P(n\gamma)- \int_{0}^{1} P(x)\,dx}\\
 	&\qquad+\abs[\bigg]{\int_{0}^{1} P(x)\,dx-\int_{0}^{1} f(x)\,dx}\\
 	&\leq \frac{1}{N} \sum_{n=1}^{N} \abs{f(n\gamma)-P(n\gamma)}+
-	   \epsilon+ \int_{0}^{1} \abs{P(x)-f(x)}\,dx\leq3\epsilon
+	   \epsilon+ \int_{0}^{1} \abs{P(x)-f(x)}\,dx\\
+           &\leq3\epsilon
       \end{align*}
     \end{enumerate}
   \end{proof}
@@ -1337,7 +1339,7 @@ Für den Beweis der Hauptaussage benötigen wir zunächst eine Vorbereitung:
 \begin{bemerk}
   \begin{enumerate}
    \item Die Funktion $f$ ist komplexwertig. Eine einfache Modifizierung
-    liefert, dass $\sum 2^{-n\alpha} \cos(2^{n}x)$ und $\sum 2^{-n\alpha}
+    liefert, dass die Summen $\sum 2^{-n\alpha} \cos(2^{n}x)$ und $\sum 2^{-n\alpha}
     \sin(2^{n}x)$ nirgends differenzierbar sind.
    \item Für $\alpha>1$ folgt, dass $f_{\alpha}, \sum\dotsi\cos(2^{n}x),
     \sum\dotsi\sin(2^{n}x)$ einmal stetig differenzierbar sind. Für $\alpha=1$
@@ -1526,9 +1528,10 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
 	\abs{\xi_{j}^{2} \hat{f}(\xi)} &=^{\text{\autoref{satz:212}}}
 	   \abs{\widehat{\diffp{f}{{x_{j}}}[2]}
 	     (\xi)} \leq^{\text{\autoref{satz:211}}}
-	   (2\pi)^{-\nicefrac{n}{2}} \norm{\diffp{f}{{x_{j}}}[2] |L_{1}}= (2\pi)^{-\nicefrac{n}{2}}
-       C_{j}\\
-       \abs{\hat{f}(\xi)} &\leq c\norm{f|L_{1}}\leq C\\
+	   (2\pi)^{-\nicefrac{n}{2}} \norm{\diffp{f}{{x_{j}}}[2]
+             |L_{1}}\\
+           &= (2\pi)^{-\nicefrac{n}{2}} C_{j} \abs{\hat{f}(\xi)} &\leq
+           c\norm{f|L_{1}}\leq C\\
 	\Rightarrow \abs{(1+\abs{\xi}^{2})\hat{f}(\xi)} &\leq C+ \sum C_{j}=C' \quad
 	   \forall \xi\in\R^{n}\\
 	\Rightarrow \abs{\hat{f}(\xi)} &\leq \frac{C'}{1+\abs{\xi}^{2}}
@@ -2038,9 +2041,9 @@ Damit können wir die Fouriertransformation auf $L_{2}$ definieren:
 \begin{bemerk}
   Für $f\in L_{1}\cap L_{2}$ gilt $\hat{f}=\hat{f}$ fast-überall. Dabei
   bezeichnet das erste $\hat{f}$ die ursprüngliche Definition und das zweite
-  die $L_{2}$-Definition. Man kann beweisen, dass
-  $(2\pi)^{-\nicefrac{N}{2}}\int_{\abs{x}\leq R} f(x)
-  e^{-ix\xi}\,dx\xrightarrow{L_{2}} \hat{f}$ für alle $f\in L_{2}$.
+  die $L_{2}$-Definition. Man kann beweisen, dass die Darstellung
+  $(2\pi)^{-\nicefrac{N}{2}}\int_{\abs{x}\leq R} f(x) e^{-ix\xi}\,dx$
+  in ${L_{2}}$ gegen $\hat{f}$ strebt (für alle $f\in L_{2}$).
 \end{bemerk}
 
 \begin{folg}[Plancherel-Formel]
@@ -2247,7 +2250,7 @@ S(\R^{n})$ und weiter $u(\xi,t)\in S(\R^{n})$.
       $\diffp{u}{t}[2]\cos(\abs{\xi}t)=
       -\abs{\xi}^{2}\cos(\abs{\xi}t)$.
      \item $u(x,0)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}}
-      \hat{f}(\xi)e^{ix\xi}\,d\xi= \check{\hat{f}}(x)=f(x)$ und
+      \hat{f}(\xi)e^{ix\xi}\,d\xi= \check{\hat{f}}(x)=f(x)$ und\\
       $\diffp{u}{t}(x,0)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R^{n}}
       \hat{g}(x)e^{ix\xi}\,d\xi=g(x)$
      \item Die Eindeutigkeit kann man durch eine lokale Version der Energie
@@ -2370,16 +2373,21 @@ Oberflächenelement auf $\SSS$.
     u(x,t)= \diffp{}{t}(tM_{t}f)(x)+ tM_{t}g(x)
   \end{gather*}
   \begin{proof}
-    \begin{enumerate}[1.\,Schritt]
-     \item Sei $f=0$. Dann folgt aus \autoref{satz:411-neu}, $u(x,t)=
-      (2\pi)^{-\nicefrac{3}{2}}t\int_{\R^{3}}
-      \underbrace{\hat{g}(\xi)\cdot\frac{\sin(\abs{\xi}t)}{\abs{\xi}t}}_{=
-      \widehat{M_{t}g}(\xi)}e^{ix\xi}\,d\xi= t(M_{t}g)(x)$.
-     \item Für $g=0$ folgt ebenfalls aus \autoref{satz:411-neu}, $u(x,t)=
-      (2\pi)^{-\nicefrac{3}{2}} \int_{\R^{3}} \hat{f}(\xi)\cos(\abs{\xi}t)
-      e^{ix\xi}\,d\xi= \diffp{}{t} ((2\pi)^{-\nicefrac{3}{2}}t \int_{\R^{3}}
-      \hat{f}(\xi) \frac{\sin(\abs{\xi}t)}{\abs{\xi}t} e^{ix\xi}\,d\xi)=
-      \diffp{}{t} (tM_{t}f)(x)$
+    \begin{enumerate}[1.\,Schr{i}tt]
+     \item Sei $f=0$. Dann folgt aus \autoref{satz:411-neu}:
+       \begin{gather*}
+         u(x,t)= (2\pi)^{-\nicefrac{3}{2}}t\int_{\R^{3}}
+         \underbrace{\hat{g}(\xi)\cdot\frac{\sin(\abs{\xi}t)}{\abs{\xi}t}}_{=
+           \widehat{M_{t}g}(\xi)}e^{ix\xi}\,d\xi= t(M_{t}g)(x)
+       \end{gather*}
+     \item Für $g=0$ folgt ebenfalls aus \autoref{satz:411-neu}
+       \begin{align*}
+         u(x,t) &= (2\pi)^{-\nicefrac{3}{2}} \int_{\R^{3}}
+         \hat{f}(\xi)\cos(\abs{\xi}t) e^{ix\xi}\,d\xi\\
+         &= \diffp{}{t}((2\pi)^{-\nicefrac{3}{2}}t \int_{\R^{3}} \hat{f}(\xi)
+         \frac{\sin(\abs{\xi}t)}{\abs{\xi}t} e^{ix\xi}\,d\xi)=
+         \diffp{}{t} (tM_{t}f)(x)
+       \end{align*}
      \item Ergibt sich aus der Überlagerung beider Lösungen.
     \end{enumerate}
   \end{proof}
@@ -2978,7 +2986,8 @@ G_{n}$ gilt:
   \mu((O_{1}\times\dotso \times O_{n})(g_{1},\dotsc, g_{n})) &=
      \mu(O_{1}g_{1}\times\dotso \times O_{n}g_{n})\\
   &= \mu_{1}(O_{1}g_{1})\dotso \mu_{n}(O_{n}g_{n})= \mu_{1}(O_{1})\dotso
-     \mu_{n}(O_{n})= \mu(O_{1}\times\dotso \times O_{n})
+     \mu_{n}(O_{n})\\
+     &= \mu(O_{1}\times\dotso \times O_{n})
 \end{align*}
 
 \begin{bsp}
@@ -3086,10 +3095,12 @@ das Inverse ist $X^{-1}(x)=\overline{X(x)}$.
       E\}<\epsilon$. Wegen
       \begin{align*}
 	\abs{X_{1}(x)X_{2}(x) - X_{0}(x)} &\leq \abs{X_{1}(x)X_{2}(x) -
-	   X^{0}_{1}(x)X_{2}(x)} + \abs{X^{0}_{1}(x)X_{2}(x)-
-	   X^{0}_{1}(x)X^{0}_{2}(x)} + \abs{X^{0}_{1}X^{0}_{2}(x)- X_{0}(x)}\\
-	&= \abs{X_{1}(x)- X^{0}_{1}(x)}+ \abs{X_{2}(x)-X^{0}_{2}(x)}+
-	   \abs{X^{0}_{1}(x)X^{0}_{2}(x)- X_{0}(x)}
+	   X^{0}_{1}(x)X_{2}(x)}\\
+         &\qquad+ \abs{X^{0}_{1}(x)X_{2}(x)-
+           X^{0}_{1}(x)X^{0}_{2}(x)}\\
+         &\qquad+ \abs{X^{0}_{1}X^{0}_{2}(x)- X_{0}(x)}\\
+	&= \abs{X_{1}(x)- X^{0}_{1}(x)}+ \abs{X_{2}(x)-X^{0}_{2}(x)}\\
+        &\qquad+\abs{X^{0}_{1}(x)X^{0}_{2}(x)- X_{0}(x)}
       \end{align*}
       ist für $X_{1}\in N(X^{0}_{1}, E, \delta), X_{2}\in
       N(X^{0}_{2},E,\delta$ auch $\abs{X_{1}(x)X_{2}(x)-X_{0}(x)}<
@@ -3838,9 +3849,13 @@ Jetzt betrachten wir nur die "`natürliche"' Reihenfolge.
 \end{defini}
 
 \begin{bsp}
-  Die Räume $L_{j}=\overline{\spn}\{1_{\Delta_{jk}}\colon k\in\Z\}= \{f\in
-  L_{2}(\R)\colon f\text{ konstant auf allen Intervallen } [k2^{-j},
-  (k+1)2^{-j}) \text{ für } k\in\Z\}$ aus \autoref{satz:412} formen
+  Die Räume 
+  \begin{align*}
+    L_{j} &=\overline{\spn}\{1_{\Delta_{jk}}\colon k\in\Z\}\\
+    &= \{f\in L_{2}(\R)\colon f\text{ konstant auf allen Intervallen }
+    [k2^{-j}, (k+1)2^{-j}) \text{ für } k\in\Z\}
+  \end{align*}
+  aus \autoref{satz:412} formen
   eine Multiskalenanalyse mit Skalierungsfunktion:
   \begin{gather*}
     \Phi=1_{\Delta_{0,0}}=1_{[0,1)}
