Kleine Änderung im Satz
git-svn-id: https://svn.lug-jena.de/uni-skripte@2211 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -358,7 +358,7 @@ als Fourierformel:
   \sum_{j=1}^{\infty} (a_{j}\cos jx+ b_{j}\sin jx)
 \end{gather*}
 
-Besser ist der moderne Ansatz, das komplex zu betrachten:
+Besser ist der moderne Ansatz, das im Komplexen zu betrachten:
 \begin{gather*}
   \cos  jx = \frac{e^{ijx}+e^{-ijx}}{2} \qquad \sin jx =
      \frac{e^{ijx}-e^{-ijx}}{2}
